--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "authors": [
         {
-            "name": "ProgramadoZ",
+            "name": "Dilan Adrian Zapata Ortiz",
             "email": "dilanadrianzapataortiz26@gmail.com"
         }
     ],
