--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     },
     "authors": [
         {
-            "name": "Dilan Adrian Zapata Ortiz",
-            "email": "dilanadrianzapataortiz26@gmail.com"
+            "name": "karen",
+            "email": "yerakaren0506@gmail.com"
         }
     ],
     "license": "MIT"
