--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,5 @@
 {
     "name": "karen/pruebas",
-    "description": "A brief description of what your package does.", 
-    "require": {
-        "phpunit/phpunit": "^11.5",
-        "psr/log": "^3.0"
-    },
     "autoload": {
         "psr-4": {
             "Karen\\Pruebas\\": "src/"
@@ -16,5 +11,5 @@
             "email": "yerakaren0506@gmail.com"
         }
     ],
-    "license": "MIT"
+    "require": {}
 }
